fixed alignment in contact section

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -185,6 +185,7 @@ a:hover {
   outline-offset: 3px;
   text-decoration: none;
   margin-right: 15px;
+  margin-left: 3px;
 }
 
 .starfish-section {
